# proxybot-export

./: Cargo.toml  README.md  build.rs  export-v1.schema.json
crates/converter/: Cargo.toml
crates/converter-cli/: Cargo.toml
crates/converter-cli/src/: main.rs
crates/converter/src/: error.rs  lib.rs  pluralkit.rs
crates/converter/testdata/: pluralkit-exmpl.json
schemas/: export-v1.schema.json
src/: lib.rs
